--- a/build.xml
+++ b/build.xml
@@ -33,8 +33,13 @@
     </target>
 
 
-	<! — Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in this organization’s namespace only →
-	<target name=”deployall”>
-		<sf:deploy username=”${sf.username}” password=”${sf.password}” serverurl=”${sf.serverurl}” testlevel=”NoTestRun” logtype=”Detail” deployRoot=”force-app”/>
-	</target>
+	
+	<!--  Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in this organization’s namespace only -->
+	
+<target name="deployall">
+      <!-- Upload the contents of the "codepkg" directory, running the tests for just 1 class -->
+      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" testlevel="NoTestRun" logtype="Detail" deployRoot="force-app"> 
+      </sf:deploy>
+    </target>
+
 </project>
