--- a/build.properties
+++ b/build.properties
@@ -2,15 +2,19 @@
 #
 
 # Specify the login credentials for the desired Salesforce organization
-#sf.username = ragnew@cyntexa.com
-#sf.password = Ragini@1998wQcuCrLMIOZsM5uJkPfXpiiXP
+sf.username = ragnew@cyntexa.com
+sf.password = Ragini@1998wQcuCrLMIOZsM5uJkPfXpiiXP
 
-#sf.myDevusername= ragini@cyntexa.com
-#sf.myDevpassword= Raghu@123upU8SZQeTlt23OYRmziH31Qo
+sf.myDevusername= ragini@cyntexa.com
+sf.myDevpassword= Raghu@123upU8SZQeTlt23OYRmziH31Qo
+
+#sf.myDevusername= ragnew@cyntexa.com
+#sf.myDevpassword= Ragini@1998wQcuCrLMIOZsM5uJkPfXpiiXP
 
 
-sf.username= ragini@cyntexa.com
-sf.password= Raghu@123upU8SZQeTlt23OYRmziH31Qo
+
+#sf.username= ragini@cyntexa.com
+#sf.password= Raghu@123upU8SZQeTlt23OYRmziH31Qo
 
 #sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
 #sf.pkgName = <Insert comma separated package names to be retrieved>
