--- a/build.xml
+++ b/build.xml
@@ -29,5 +29,10 @@
       <!-- Retrieve the contents listed in the file codepkg/package.xml into the codepkg directory -->
       <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="codepkg" unpackaged="codepkg/package.xml"/>
     </target>
+<target name="deployall">
+      <!-- Upload the contents of the "codepkg" directory, running the tests for just 1 class -->
+      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" testlevel="NoTestRun" logtype="Detail" deployRoot="force-app"> 
+      </sf:deploy>
+    </target>
 
 </project>
