--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,7 @@
     </target>
 <target name="deployall">
       <!-- Upload the contents of the "codepkg" directory, running the tests for just 1 class -->
-      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" testlevel="NoTestRun" logtype="Detail" deployRoot="force-app/package.xml"> 
+      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" testlevel="NoTestRun" logtype="Detail" deployRoot="force-app/"> 
       </sf:deploy>
     </target>
 
