--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
 	 <!-- Retrieve the contents listed in the file codepkg/package.xml into the codepkg directory -->
      <target name="retrieveCode">
      
-      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="force-app/main/default/classes" unpackaged="force-app/main/default/classes/package.xml"/>
+      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="force-app/main/default/aura" unpackaged="force-app/main/default/classes/package.xml"/>
     </target> 
 	
 	
@@ -35,10 +35,10 @@
     </target>
    
    
-<target name="deployall">
+<!-- <target name="deployall">
       <!-- Upload the contents of the "codepkg" directory, running the tests for just 1 class -->
       <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" testlevel="NoTestRun" logtype="Detail" deployRoot="force-app/main/default/classes"> 
       </sf:deploy>
     </target>
-
+ -->
 </project>
