--- a/build.xml
+++ b/build.xml
@@ -23,14 +23,14 @@
 	 <!-- Retrieve the contents listed in the file codepkg/package.xml into the codepkg directory -->
      <target name="retrieveCode">
      
-      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="retrieveData" unpackaged="force-app/main/default/classes/package.xml"/>
+      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="force-app/main/default/classes" unpackaged="force-app/main/default/classes/package.xml"/>
     </target> 
 	
 	
    <!-- Shows deploying code & running tests for code in directory -->
     <target name="deployCode">
       <!-- Upload the contents of the "codepkg" directory, running the tests for just 1 class -->
-      <sf:deploy username="${sf.myDevusername}" password="${sf.myDevpassword}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="retrieveData">
+      <sf:deploy username="${sf.myDevusername}" password="${sf.myDevpassword}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="force-app/main/default/classes">
        </sf:deploy>
     </target>
    
