--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
 	 <!-- Retrieve the contents listed in the file codepkg/package.xml into the codepkg directory -->
      <target name="retrieveCode">
      
-      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="force-app/main/default/classes" unpackaged="force-app/main/default/classes/package.xml"/>
+      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="sample/codepkg" unpackaged="codepkg/package.xml"/>
     </target> 
 	
 	
